; ModuleID = '/home/carl/AnghaBench/lwan/src/samples/techempower/extr_database.c_db_stmt_finalize_mysql.c'
source_filename = "/home/carl/AnghaBench/lwan/src/samples/techempower/extr_database.c_db_stmt_finalize_mysql.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.db_stmt = type { i32 }
%struct.db_stmt_mysql = type { %struct.db_stmt_mysql*, %struct.db_stmt_mysql*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.db_stmt*)* @db_stmt_finalize_mysql to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @db_stmt_finalize_mysql(%struct.db_stmt* %0) #0 {
  %2 = alloca %struct.db_stmt*, align 8
  %3 = alloca %struct.db_stmt_mysql*, align 8
  store %struct.db_stmt* %0, %struct.db_stmt** %2, align 8
  %4 = load %struct.db_stmt*, %struct.db_stmt** %2, align 8
  %5 = bitcast %struct.db_stmt* %4 to %struct.db_stmt_mysql*
  store %struct.db_stmt_mysql* %5, %struct.db_stmt_mysql** %3, align 8
  %6 = load %struct.db_stmt_mysql*, %struct.db_stmt_mysql** %3, align 8
  %7 = getelementptr inbounds %struct.db_stmt_mysql, %struct.db_stmt_mysql* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 8
  %9 = call i32 @mysql_stmt_close(i32 %8)
  %10 = load %struct.db_stmt_mysql*, %struct.db_stmt_mysql** %3, align 8
  %11 = getelementptr inbounds %struct.db_stmt_mysql, %struct.db_stmt_mysql* %10, i32 0, i32 1
  %12 = load %struct.db_stmt_mysql*, %struct.db_stmt_mysql** %11, align 8
  %13 = call i32 @free(%struct.db_stmt_mysql* %12)
  %14 = load %struct.db_stmt_mysql*, %struct.db_stmt_mysql** %3, align 8
  %15 = getelementptr inbounds %struct.db_stmt_mysql, %struct.db_stmt_mysql* %14, i32 0, i32 0
  %16 = load %struct.db_stmt_mysql*, %struct.db_stmt_mysql** %15, align 8
  %17 = call i32 @free(%struct.db_stmt_mysql* %16)
  %18 = load %struct.db_stmt_mysql*, %struct.db_stmt_mysql** %3, align 8
  %19 = call i32 @free(%struct.db_stmt_mysql* %18)
  ret void
}

declare dso_local i32 @mysql_stmt_close(i32) #1

declare dso_local i32 @free(%struct.db_stmt_mysql*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
